<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="radiosales">Sales</string>
    <string name="radioservice">Service</string>
    <string name="app_name">Sales</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
	<string name="login">Login!</string>
	<string name="logout">Logout</string>
	<string name="register">Register!</string>
	<string name="cancel">Cancel</string>
	<string name="email">Email</string>
	<string name="back">Back</string>
	<string name="password">Password</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="birthdate">Birth Date</string>
	<string name="phone">Phone Number</string>
	<string name="supervisor_email">Supervisor Email</string>
	<string name="submit">Submit</string>
	<string name="view_inventory">View Cars in Inventory</string>
	<string name="view_use">View Cars in Use</string>
	<string name="print_details">Print Details About Car</string>
	<string name="print_contract">Print Contract</string>
	<string name="checkout_car">Checkout a Car</string>
	<string name="checkin_car">Checkin a Car</string>
	<string name="add_note">Add Service Note</string>
	
</resources>
