<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:id="@+id/layoutContainer" 
    android:orientation="horizontal">
  	
	<RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15">
    </RelativeLayout>
    
     <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.7">
        
          <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
		        
		    <TextView
		        android:id="@+id/login_login_title"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="@string/login"
		        android:textSize="40sp"
		        />
		
		    <EditText
		        android:id="@+id/input_login_email"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="23dp"
		        android:gravity="center"
		        android:ems="10"
		        android:hint="@string/email"
		        android:inputType="textEmailAddress" >
		        <requestFocus />
		    </EditText>
		    
		    <EditText
		        android:id="@+id/input_login_email"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="23dp"
		        android:gravity="center"
		        android:ems="10"
		        android:hint="@string/password"
      			android:inputType="textPassword"  >
      		</EditText>
		

		    <Button
		        android:id="@+id/button_login_submit"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="23dp"
		        android:text="@string/submit" 
		        android:onClick="submitButtons"
		        />
		    	
    	</LinearLayout>
    
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15">
    </RelativeLayout>
    
</LinearLayout>